# Backtesting

./: pyproject.toml
scripts/: script_examples_Backtest.py  script_examples_Metrics.py  script_examples_Weights.py
src/Backtesting/: BT.py
src/backtesting/: Backtesting1.py
tests/: test_AssetsHandler.py  test_DailyPrices.py  test_DailyWeights.py  test_Groups.py  test_Metrics.py  test_ModelPortfolio.py  test_PortfolioTranches.py  test_PortfolioWeights.py  test_Ratings.py  test_Signals.py  test_Utils.py  test_Weightings.py  test_Weights.py  z_test_Weights.py
