[project]
name = "Backtesting"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "QuantIbex", email = "coding@quantibex.ch"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
lint = [
    "ruff>=0.14.8",
    "pylint>=4.0.4",
]
vscode = [
    "ipykernel>=7.1.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true


[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
indent-style = "space"

[tool.pylint.format]
max-line-length = "88"
